--- a/packages/yum/almalinux-10/Dockerfile
+++ b/packages/yum/almalinux-10/Dockerfile
@@ -14,7 +14,7 @@ RUN \
     epel-release \
     'dnf-command(config-manager)' \
     https://packages.groonga.org/almalinux/10/groonga-release-latest.noarch.rpm \
-    https://apache.jfrog.io/artifactory/arrow/almalinux/$(cut -d: -f5 /etc/system-release-cpe | cut -d. -f1)/apache-arrow-release-latest.rpm && \
+    https://packages.apache.org/artifactory/arrow/almalinux/$(cut -d: -f5 /etc/system-release-cpe | cut -d. -f1)/apache-arrow-release-latest.rpm && \
   dnf config-manager --set-enabled crb && \
   dnf groupinstall -y ${quiet} "Development Tools" && \
   dnf install -y ${quiet} \
