emphasize that we use the Apache Arrow's main branch

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -77,7 +77,7 @@ jobs:
             cxx: g++
           - cc: gcc
             cxx: g++
-            apache-arrow: "main"
+            apache-arrow-main: yes
           - cc: gcc
             cxx: g++
             mruby: "OFF"
@@ -106,7 +106,7 @@ jobs:
             ccache \
             cmake
       - uses: actions/checkout@v4
-        if: matrix.apache-arrow == 'main'
+        if: matrix.apache-arrow-main == 'yes'
         with:
           path: apache-arrow
           repository: apache/arrow
@@ -117,10 +117,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ccache
-          key: cmake-ubuntu-${{ matrix.cc }}-${{ matrix.apache-arrow }}-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**', 'apache-arrow/cpp/src/**') }}
-          restore-keys: cmake-ubuntu-${{ matrix.cc }}-${{ matrix.apache-arrow }}-ccache-
+          key: cmake-ubuntu-${{ matrix.cc }}-${{ matrix.apache-arrow-main }}-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**', 'apache-arrow/cpp/src/**') }}
+          restore-keys: cmake-ubuntu-${{ matrix.cc }}-${{ matrix.apache-arrow-main }}-ccache-
       - name: Configure Apache Arrow
-        if: matrix.apache-arrow == 'main'
+        if: matrix.apache-arrow-main == 'yes'
         run: |
           ccache --show-stats --verbose --version
           cmake \
@@ -129,12 +129,12 @@ jobs:
             --preset ninja-debug \
             -DCMAKE_INSTALL_PREFIX=$PWD/install
       - name: Build Apache Arrow
-        if: matrix.apache-arrow == 'main'
+        if: matrix.apache-arrow-main == 'yes'
         run: |
           cmake --build apache-arrow/cpp.build
           ccache --show-stats --verbose
       - name: Install Apache Arrow
-        if: matrix.apache-arrow == 'main'
+        if: matrix.apache-arrow-main == 'yes'
         run: |
           cmake --install apache-arrow/cpp.build
       - name: Set environment variables
@@ -142,7 +142,7 @@ jobs:
           echo "LD_LIBRARY_PATH=${PWD}/install/lib" >> ${GITHUB_ENV}
           echo "PKG_CONFIG_PATH=${PWD}/install/lib/pkgconfig" >> ${GITHUB_ENV}
       - name: Enable Apache Arrow repository
-        if: matrix.apache-arrow != 'main'
+        if: matrix.apache-arrow-main != 'yes'
         run: |
           sudo apt update -o="APT::Acquire::Retries=3"
           sudo apt install -y -V -o="APT::Acquire::Retries=3" \
@@ -163,7 +163,7 @@ jobs:
           #   -e "s,^URIs: \\(.*\\)/,URIs: \\1-rc/,g" \
           #   /etc/apt/sources.list.d/apache-arrow.sources
       - name: Install Apache Arrow packages
-        if: matrix.apache-arrow != 'main'
+        if: matrix.apache-arrow-main != 'yes'
         run: |
           sudo apt update -o="APT::Acquire::Retries=3"
           sudo apt install -y -V -o="APT::Acquire::Retries=3" \
