use libxsimd-dev package to reduce the build time

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -113,7 +113,8 @@ jobs:
             build-essential \
             ninja-build \
             ccache \
-            cmake
+            cmake \
+            libxsimd-dev
       - uses: actions/checkout@v4
         if: matrix.apache-arrow-main == 'yes'
         with:
