--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1701,6 +1701,8 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
         string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Wno-frame-larger-than")
         string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Wno-non-virtual-dtor")
         string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Wno-non-virtual-dtor")
+        string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Wno-unused-function")
+        string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Wno-unused-function")
       endif()
       set(BUILD_SHARED_LIBS ON)
       set(BUILD_STATIC_LIBS OFF)
