--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -73,6 +73,7 @@ jobs:
           - "images:ubuntu/24.04"
           - "images:almalinux/8"
           - "images:almalinux/9"
+          - "images:almalinux/10"
           - "images:amazonlinux/2023"
     steps:
       - uses: actions/checkout@v5
