--- a/lib/proc/c_sources.am
+++ b/lib/proc/c_sources.am
@@ -1,6 +1,7 @@
 libgrnproc_c_sources =				\
 	proc_cast.c				\
 	proc_column.c				\
+	proc_command_list.c			\
 	proc_config.c				\
 	proc_distance.c				\
 	proc_dump.c				\
