--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -472,6 +472,9 @@ exit 0
 %endif
 
 %changelog
+* Mon Sep 29 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.7-1
+- New upstream release.
+
 * Fri Aug 29 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.5-1
 - New upstream release.
 
