--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1704,8 +1704,8 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
         #
         # https://github.com/ggml-org/llama.cpp/issues/15374 will not
         # be fixed.
-        string(APPEND CMAKE_C_FLAGS_DEBUG " -Wno-absolute-value")
-        string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO " -Wno-absolute-value")
+        string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Wno-absolute-value")
+        string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Wno-absolute-value")
         string(APPEND CMAKE_C_FLAGS_DEBUG " -Wno-declaration-after-statement")
         string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO
                " -Wno-declaration-after-statement")
