--- a/config.h.cmake.in
+++ b/config.h.cmake.in
@@ -91,6 +91,7 @@
 
 /* packages */
 #cmakedefine GRN_WITH_APACHE_ARROW
+#cmakedefine GRN_WITH_BASE64
 #cmakedefine GRN_WITH_BENCHMARK
 #cmakedefine GRN_WITH_BLOSC
 #cmakedefine GRN_WITH_CURL
