--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1703,13 +1703,23 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
         string(APPEND CMAKE_C_FLAGS " /wd4996")
         string(APPEND CMAKE_CXX_FLAGS " /wd4996")
       elseif(GRN_C_COMPILER_GNU_LIKE)
-        if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+        if(CMAKE_C_COMPILER_ID STREQUAL GNU)
+          # TODO: Remove this suppression if upstream PR is merged.
+          # https://github.com/ggml-org/llama.cpp/pull/16573
+          string(APPEND CMAKE_C_FLAGS_DEBUG " -Wno-discarded-qualifiers")
+          string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO
+                 " -Wno-discarded-qualifiers")
+        elseif(CMAKE_C_COMPILER_ID STREQUAL Clang)
           # This is for old Clang...?
           #
           # https://github.com/ggml-org/llama.cpp/issues/15374 will not
           # be fixed.
           string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Wno-absolute-value")
           string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Wno-absolute-value")
+          string(APPEND CMAKE_C_FLAGS_DEBUG
+                 " -Wno-incompatible-pointer-types-discards-qualifiers")
+          string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO
+                 " -Wno-incompatible-pointer-types-discards-qualifiers")
         endif()
         string(APPEND CMAKE_C_FLAGS_DEBUG " -Wno-declaration-after-statement")
         string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO
