--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -128,6 +128,7 @@ repos:
           ?lib/h3\.c|
           ?lib/highlighter\.c|
           ?lib/ii\.cpp|
+          ?lib/io\.c|
           ?lib/index_column\.c|
           ?lib/language_model\.cpp|
           ?lib/load\.c|
